# vaultwarden

./: Cargo.toml  Dockerfile  README.md  build.rs  config.yaml  publish.sh  regexes.txt  rustfmt.toml
migrations/: V1__init.sql  _old_V1__init copy.sql
src/: auth.rs  config.rs  crypto.rs  error.rs  events.rs  mail.rs  main.rs  ratelimit.rs  templates.rs  util.rs
src/api/: log_client_error.rs  mod.rs
src/api/admin/: mod.rs
src/api/core/: accounts.rs  ciphers.rs  emergency_access.rs  events.rs  folders.rs  mod.rs  organizations.rs  public.rs  sends.rs
src/api/core/two_factor/: authenticator.rs  duo.rs  email.rs  mod.rs  webauthn.rs  yubikey.rs
src/api/icons/: mod.rs
src/api/identity/: mod.rs
src/api/notifications/: mod.rs
src/api/web/: mod.rs
src/db/: mod.rs
src/db/models/: attachment.rs  cipher.rs  collection.rs  device.rs  emergency_access.rs  event.rs  favorite.rs  folder.rs  group.rs  invitation.rs  mod.rs  org_policy.rs  organization.rs  send.rs  sso_nonce.rs  two_factor.rs  two_factor_incomplete.rs  user.rs
src/jobs/: emergency.rs  mod.rs
src/push/: mod.rs
src/static/scripts/: admin_settings.js  admin_users.js
src/static/templates/: 404.hbs
src/static/templates/admin/: diagnostics.hbs  login.hbs  organizations.hbs  settings.hbs  users.hbs
src/static/templates/email/: send_org_invite.hbs  send_org_invite.html.hbs
tools/: global_domains.py
