[package]
name = "vaultwarden"
version = "1.1.0"
authors = ["Daniel García <dani-garcia@users.noreply.github.com>"]
edition = "2021"
rust-version = "1.68.2"
resolver = "2"

repository = "https://github.com/dani-garcia/vaultwarden"
readme = "README.md"
license = "AGPL-3.0-only"
publish = false
build = "build.rs"

[features]

[dependencies]
log = "0.4"
once_cell = "1.18"
url = "2.4"
argon2 = "0.5"
semver = "1.0"
dashmap = "5.4"
uuid = { version = "1.4", features = ["v4", "serde"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
bb8 = "0.8"
bb8-postgres = "0.8"
jwt = "0.16"
always_cell = "0.1"
ipnetwork = { version = "0.20", features = ["serde"] }
serde_with = "3.0"
anyhow = "1.0"
serde_yaml = "0.8"
async-trait = "0.1"
indexmap = { version = "1.9", features = ["serde"] }
lazy_static = "1.4"
strum = { version = "0.25", features = ["derive"] }
mime_guess = "2.0.4"
mime = "0.3.17"
smallvec = { version = "1.10", features = ["write"] }
serde_repr = "0.1"
serde-aux = "4.2"
hex = "0.4"
varint-rs = "2.2.0"
axol = { version = "0.1.4" }

jsonwebtoken = "8.3.0"

fern = { version = "0.6.2", features = [] }
tokio-tungstenite = "0.19.0"
rmpv = "1.0.0"
futures = "0.3.28"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "fs", "io-util", "parking_lot", "time", "signal"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
rand = { version = "0.8.5", features = ["small_rng"] }
ring = "0.16.20"
chrono = { version = "0.4.26", features = ["clock", "serde"], default-features = false }
chrono-tz = "0.8.2"
job_scheduler_ng = "2.0.4"
data-encoding = "2.4.0"
totp-lite = "2.0.0"
yubico = { version = "0.11.0", features = ["online-tokio"], default-features = false }
webauthn-rs = "0.3.2"
lettre = { version = "0.10.4", features = ["smtp-transport", "sendmail-transport", "builder", "serde", "tokio1-native-tls", "hostname", "tracing", "tokio1"], default-features = false }
percent-encoding = "2.2.0" # URL encoding library used for URL's in the emails
email_address = "0.2.4"
handlebars = { version = "4.3.7", features = ["dir_source"] }
reqwest = { version = "0.11.18", features = ["stream", "json", "gzip", "brotli", "socks", "cookies", "trust-dns"] }
html5gum = "0.5.2"
regex = { version = "1.8.3", features = ["std", "perf", "unicode-perl"], default-features = false }
data-url = "0.2.0"
bytes = "1.4.0"
cached = "0.44.0"
#TODO: remove
cookie = "0.16.2"
#TODO: remove
cookie_store = "0.19.0"
openssl = "0.10.54"
governor = "0.5.1"
openidconnect = "2.5.0"

tracing-opentelemetry = "0.19.0"
tracing-subscriber = "0.3.17"
opentelemetry = { version = "0.19.0", features = ["rt-tokio"] }
opentelemetry_api = { version = "0.19.0" }
opentelemetry-otlp = "0.12.0"
tracing = { version = "0.1", features = ["log-always", "release_max_level_debug"]}


# Strip debuginfo from the release builds
# Also enable thin LTO for some optimizations
[profile.release]
strip = "debuginfo"
lto = "thin"

# Always build argon2 using opt-level 3
# This is a huge speed improvement during testing
[profile.dev.package.argon2]
opt-level = 3

# A little bit of a speedup
[profile.dev]
split-debuginfo = "unpacked"
